# nilaos.github.io

./: 404.html  Cargo.toml  Gemfile  LICENSE  README.md  _config.yml  index.html
.github/workflows/: jekyll-gh-pages.yml  publish_gh_pages.yml
_posts/: 2023-09-09-welcome-to-jekyll.markdown  2024-05-02-smt-or-why-is-my-core-count-different.md  2024-10-20-teaching-cognitive.md
assets/css/: style.scss
pages/: Gemfile  _config.yml  about.md  contact.md  index.html
pages/_posts/: 2024-05-02-smt-or-why-is-my-core-count-different.md
